src/objects/Status_Report__c.object
<CustomObject>
    <description>Status reports are a great way to formalize the progress of a project at the individual team member level.  Through reports and dashboards, summary reporting can help a project manager quickly gather information and export to excel as needed.</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Summary__c</fullName>
        <label>Status Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Items__c</fullName>
        <label>Open Items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Deliverables__c</fullName>
        <label>Planned Deliverables</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Risks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if there are any potential risks that came up during this assignment.  Please describe the risks using the &quot;risks&quot; tab.</inlineHelpText>
        <label>Potential Risks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>PPM_Project__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>R00N80000002lZ2OEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Assignment</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>R00N80000002lZ17EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Status Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{YYYY}{MM}-{0}</displayFormat>
        <label>Status Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>